src/authorship/snapshots/autter__log_fmt__authorship_log_serialization__tests__conversion_from_old_format.snap
---
source: src/log_fmt/authorship_log_serialization.rs
expression: new_log
---
AuthorshipLogV3 {
    attestations: [],
    metadata: AuthorshipMetadata {
        schema_version: "authorship/3.0.0",
        base_commit_sha: "test-commit-sha",
        prompts: {},
    },
}
