src/authorship/snapshots/autter__log_fmt__authorship_log_serialization__tests__format_line_ranges.snap
---
source: src/log_fmt/authorship_log_2.rs
expression: format_line_ranges(&ranges)
---
"1,2,19-222"
