src/authorship/snapshots/autter__log_fmt__authorship_log_serialization__tests__parse_line_ranges.snap
---
source: src/log_fmt/authorship_log_2.rs
expression: ranges
---
[
    Single(
        1,
    ),
    Single(
        2,
    ),
    Range(
        19,
        222,
    ),
]
