src/authorship/snapshots/autter__log_fmt__authorship_log_serialization__tests__serialize_deserialize_no_attestations.snap
---
source: src/log_fmt/authorship_log_serialization.rs
expression: serialized
---
"---\n{\n  \"schema_version\": \"authorship/3.0.0\",\n  \"base_commit_sha\": \"abc123\",\n  \"prompts\": {\n    \"c9883b0\": {\n      \"agent_id\": {\n        \"tool\": \"cursor\",\n        \"id\": \"session_123\",\n        \"model\": \"claude-3-sonnet\"\n      },\n      \"human_author\": null,\n      \"messages\": [],\n      \"total_additions\": 0,\n      \"total_deletions\": 0,\n      \"accepted_lines\": 0\n    }\n  }\n}"
